# agape

./: .env.example  .gitignore  CLAUDE.md  README.md  channels.example.yaml  keywords.yaml  pyproject.toml
.github/workflows/: agape.yml
data/raw/naver_search/: 2026-07-23.jsonl  2026-07-24.jsonl
data/raw/naver_shopping/: 2026-07-23.jsonl  2026-07-24.jsonl
data/raw/pinterest_metrics/: 2026-07-23.jsonl  2026-07-24.jsonl
data/raw/pinterest_top/: 2026-07-23.jsonl  2026-07-24.jsonl
data/raw/youtube_stats/: 2026-07-23.jsonl  2026-07-24.jsonl
data/raw/youtube_trending/: 2026-07-23.jsonl  2026-07-24.jsonl
data/state/: pinterest_last_end_date.json  youtube_video_pool.json
src/: cli.py  config.py  metrics.py  report.py  robots.py  storage.py
src/collectors/: naver.py  pinterest.py  pinterest_official.py  youtube.py
